--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,5 +8,6 @@ services:
     stop_signal: SIGINT
     ports:
       - '8000:8000'
-    artifacts:
-      files:
+artifacts:
+  files:
+    - public/*
